# src/main/java/com/portfolio/luisfmdc/sboot_nosql_geolocation/controller/PlaceControllerImpl.java
@@ -1,6 +1,6 @@
 package com.portfolio.luisfmdc.sboot_nosql_geolocation.controller;
 
-import com.portfolio.luisfmdc.api.LocationApi;
+import com.portfolio.luisfmdc.api.V1Api;
 import com.portfolio.luisfmdc.model.NewPlaceRequest;
 import com.portfolio.luisfmdc.model.PlaceResponse;
 import com.portfolio.luisfmdc.model.SearchPlaceResponse;
@@ -10,19 +10,26 @@ import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
+import java.util.List;
+
 @RestController
 @RequiredArgsConstructor
-public class PlaceControllerImpl implements LocationApi {
+public class PlaceControllerImpl implements V1Api {
 
     private final PlaceService service;
 
     @Override
-    public ResponseEntity<SearchPlaceResponse> searchPlace(String cep) {
-        return new ResponseEntity<>(service.searchPlace(cep), HttpStatus.OK);
+    public ResponseEntity<SearchPlaceResponse> searchPlaceByCep(String cep) {
+        return new ResponseEntity<>(service.searchPlaceByCep(cep), HttpStatus.OK);
     }
 
     @Override
     public ResponseEntity<PlaceResponse> insertNewPlace(NewPlaceRequest newPlaceRequest) {
         return new ResponseEntity<>(service.insertNewPlace(newPlaceRequest), HttpStatus.CREATED);
+    }
+
+    @Override
+    public ResponseEntity<List<PlaceResponse>> searchPlaceByName(String nome) {
+        return new ResponseEntity<>(service.searchPlaceByName(nome), HttpStatus.OK);
     }
 }
